--- a/app/src/main/res/layout/fragment_sleep_quality.xml
+++ b/app/src/main/res/layout/fragment_sleep_quality.xml
@@ -23,7 +23,9 @@
      the whole ViewModel, so that we can access the LiveData,
      click handlers, and state variables. -->
     <data>
-
+        <variable
+            name="sleepQualityViewModel"
+            type="com.android.example.myapplication123.sleepquality.SleepQualityViewModel" />
     </data>
 
     <!-- Start of the visible fragment layout using ConstraintLayout -->
@@ -57,7 +59,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/title_text"
             app:srcCompat="@drawable/ic_sleep_0"
-            tools:ignore="VectorDrawableCompat" />
+            tools:ignore="VectorDrawableCompat"
+            android:onClick="@{() -> sleepQualityViewModel.onSetSleepQuality(0)}"/>
 
         <ImageView
             android:id="@+id/quality_one_image"
@@ -68,7 +71,8 @@
             app:layout_constraintEnd_toStartOf="@+id/quality_two_image"
             app:layout_constraintStart_toEndOf="@+id/quality_zero_image"
             app:srcCompat="@drawable/ic_sleep_1"
-            tools:ignore="VectorDrawableCompat" />
+            tools:ignore="VectorDrawableCompat"
+            android:onClick="@{() -> sleepQualityViewModel.onSetSleepQuality(1)}"/>
 
         <ImageView
             android:id="@+id/quality_two_image"
@@ -80,13 +84,15 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/quality_one_image"
             app:srcCompat="@drawable/ic_sleep_2"
-            tools:ignore="VectorDrawableCompat" />
+            tools:ignore="VectorDrawableCompat"
+            android:onClick="@{() -> sleepQualityViewModel.onSetSleepQuality(2)}"/>
 
         <ImageView
             android:id="@+id/quality_three_image"
             android:layout_width="@dimen/icon_size"
             android:layout_height="@dimen/icon_size"
             android:layout_marginStart="@dimen/margin"
+            android:onClick="@{() -> sleepQualityViewModel.onSetSleepQuality(3)}"
             android:layout_marginTop="@dimen/margin"
             android:layout_marginBottom="@dimen/margin"
             android:contentDescription="@string/quality_3"
@@ -103,6 +109,7 @@
             android:layout_width="@dimen/icon_size"
             android:layout_height="@dimen/icon_size"
             android:contentDescription="@string/quality_4"
+            android:onClick="@{() -> sleepQualityViewModel.onSetSleepQuality(4)}"
             app:layout_constraintBottom_toBottomOf="@+id/quality_three_image"
             app:layout_constraintEnd_toStartOf="@+id/quality_five_image"
             app:layout_constraintStart_toEndOf="@+id/quality_three_image"
@@ -121,6 +128,7 @@
             app:layout_constraintStart_toEndOf="@+id/quality_four_image"
             app:layout_constraintTop_toTopOf="@+id/quality_four_image"
             app:srcCompat="@drawable/ic_sleep_5"
+            android:onClick="@{() -> sleepQualityViewModel.onSetSleepQuality(5)}"
             tools:ignore="VectorDrawableCompat" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
